# project-g

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  design_change.yml  feature_request.yml
docs/: github_setup_checklist.md
docs/issues/: FOUNDATION-001.md
src/project_g/: __init__.py
src/project_g/infrastructure/config/: __init__.py  settings.py
src/project_g/infrastructure/logging/: __init__.py  configuration.py  context.py  masking.py
src/project_g/interfaces/api/: __init__.py  app.py
src/project_g/interfaces/api/routes/: health.py
tests/: test_package.py
tests/unit/: test_health_api.py  test_logging.py  test_settings.py
